# Software_Renderer

./: .gitignore  CMakeLists.txt  README.md
App/: App.natvis  Application.cpp  Application.h  Common.h  DrawStatsSystem.cpp  DrawStatsSystem.h  Fallback.h  GlRenderer.cpp  GlRenderer.h  IRenderer.cpp  IRenderer.h  Line2D.h  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  RenderCommands.h  RenderCommandsBuffer.cpp  RenderCommandsBuffer.h  Renderer.cpp  Renderer.h  Simd.cpp  Simd.h  SimpleThreadPool.cpp  SimpleThreadPool.h  SoftwareRenderer.cpp  SoftwareRenderer.h  Texture.cpp  Texture.h  TransformedVertex.cpp  TransformedVertex.h  TransientAllocator.cpp  TransientAllocator.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  VertexInterpolator.cpp  (+4 more)
Data/bipedal-rat-creature-wip/: LICENSE.txt
Data/dog/: LICENSE.txt
Data/dog_a_-_1of6_-_for_free__happy_new_year_2022/: LICENSE.txt
Data/rhetorician/: LICENSE.txt
Data/shiba/: LICENSE.txt
Data/teapot/: LICENSE.txt  Teapot.gltf
Dependencies/SFML-2.6.0-32/lib/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
Dependencies/SFML-2.6.0/lib/: sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s.lib
Dependencies/SFML-2.6.0/lib/cmake/SFML/: SFMLStaticTargets-debug.cmake  SFMLStaticTargets-release.cmake  SFMLStaticTargets.cmake
Dependencies/Tracy/: TracyClient.cpp
Dependencies/assimp/libx32/: assimp-vc143-mt.exp  assimp-vc143-mt.lib
Dependencies/assimp/libx64/: assimp-vc143-mt.exp
ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
imgui/: imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
stb/: stb_image.h
